<resources>
    <string name="app_name">AplikasiAntiFoodWaste</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="name_label">Nama</string>
    <string name="new_account_label1">Don\'t have an account yet?</string>
    <string name="new_account_label2">Register Now</string>
    <string name="login_account_label1">Already have an account?</string>
    <string name="login_account_label2">Login Now</string>
    <string name="title_welcome">Selamat Datang di IDGAF</string>
    <string name="desc_welcome">IDGAF (I Do Give A Food) adalah aplikasi untuk mengurangi food waste</string>
    <string name="agreement_welcome">By registering or logging in you accept the terms and conditions and privacy policy</string>
    <string name="title_splash">IDGAF</string>
    <string name="desc_splash">(I Do Give A Food)</string>
    <string name="search">Search</string>
    <string name="scan_your_food">Scan bahan makananmu</string>
    <string name="welcome_text">Hai Asep!</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quam quisque id diam vel quam. Ipsum suspendisse ultrices gravida dictum fusce ut placerat orci nulla. Adipiscing bibendum est ultricies integer quis auctor elit sed vulputate. Ante metus dictum at tempor commodo ullamcorper. Tellus mauris a diam maecenas sed enim ut sem. Non nisi est sit amet facilisis magna. A condimentum vitae sapien pellentesque habitant morbi. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Orci eu lobortis elementum nibh tellus. Vitae purus faucibus ornare suspendisse sed nisi lacus. Neque volutpat ac tincidunt vitae. Sed faucibus turpis in eu mi bibendum neque egestas. Proin sed libero enim sed faucibus turpis in eu. Sed enim ut sem viverra aliquet eget sit. Urna molestie at elementum eu. Tristique senectus et netus et malesuada fames. Volutpat ac tincidunt vitae semper quis lectus. Sit amet mauris commodo quis imperdiet massa tincidunt nunc. Massa enim nec dui nunc. Tellus in metus vulputate eu scelerisque felis imperdiet. Nunc consequat interdum varius sit amet mattis vulputate enim. Tristique nulla aliquet enim tortor at auctor urna nunc id. Condimentum id venenatis a condimentum vitae sapien pellentesque habitant. Mauris commodo quis imperdiet massa tincidunt nunc. Venenatis cras sed felis eget velit aliquet sagittis id consectetur. Nulla malesuada pellentesque elit eget gravida cum sociis natoque. At varius vel pharetra vel turpis nunc. Nunc non blandit massa enim nec dui nunc mattis enim. Adipiscing elit duis tristique sollicitudin nibh. Cras fermentum odio eu feugiat. Nibh mauris cursus mattis molestie a iaculis. Feugiat nisl pretium fusce id. Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque sit. Tortor at risus viverra adipiscing. Dui nunc mattis enim ut tellus elementum sagittis vitae et. Risus viverra adipiscing at in. Neque ornare aenean euismod elementum nisi quis eleifend quam adipiscing. Elit at imperdiet dui accumsan sit amet nulla facilisi morbi. Quisque sagittis purus sit amet volutpat. Suspendisse sed nisi lacus sed viverra tellus in hac habitasse. Tincidunt augue interdum velit euismod in pellentesque massa placerat. Non consectetur a erat nam. Lectus mauris ultrices eros in cursus turpis massa tincidunt. Sed turpis tincidunt id aliquet risus feugiat. Ornare suspendisse sed nisi lacus sed viverra tellus in. Pretium aenean pharetra magna ac placerat vestibulum lectus. Orci sagittis eu volutpat odio facilisis. Ultrices mi tempus imperdiet nulla malesuada pellentesque. Commodo sed egestas egestas fringilla. Duis convallis convallis tellus id interdum velit. Quam quisque id diam vel quam elementum pulvinar etiam non. Quis viverra nibh cras pulvinar mattis nunc sed blandit libero. Imperdiet dui accumsan sit amet nulla facilisi morbi tempus. Ipsum dolor sit amet consectetur. Nulla pharetra diam sit amet nisl. In massa tempor nec feugiat nisl pretium fusce id velit. Mi eget mauris pharetra et ultrices neque ornare. Urna nunc id cursus metus aliquam eleifend. Eu mi bibendum neque egestas congue quisque. Adipiscing diam donec adipiscing tristique risus nec feugiat in. Venenatis cras sed felis eget velit aliquet sagittis. Tortor at risus viverra adipiscing at. Sed nisi lacus sed viverra tellus. Cursus mattis molestie a iaculis at erat pellentesque. Viverra justo nec ultrices dui sapien. Ut tristique et egestas quis. Ornare arcu odio ut sem nulla.</string>
    <string name="storage">Penyimpanan</string>
    <string name="see_all">Lihat semua</string>
    <string name="take_from_gallery">Ambil dari Galeri</string>
    <string name="take_from_camera">Ambil dari Kamera</string>
    <string name="food_nearby">Makanan di sekitarku</string>
    <string name="scan_food">Scan makanan</string>
    <string name="confirm_scan_photo">Pakai gambar ini?</string>
    <string name="yes">Iya</string>
    <string name="retake_photo">Ambil ulang</string>
    <string name="title_home">Home</string>
    <string name="title_storage">Penyimpanan</string>
    <string name="title_order">Pesanan</string>
    <string name="title_profile">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Nama</string>
    <string name="telephone_number">Nomor Telepon</string>
    <string name="my_address">Alamat saya</string>
    <string name="order_id">Order ID</string>
    <string name="order_name">Order name</string>
    <string name="order_time">Waktu ambil</string>
    <string name="order_quantity">Jumlah porsi</string>
    <string name="order_status">Status pesanan:</string>
    <string name="received">Diterima</string>
    <string name="rejected">Ditolak</string>
    <string name="change_profile">Ubah Profil</string>
    <string name="logout">Logout</string>
    <string name="save_change">Simpan Perubahan</string>
    <string name="id_penyimpanan">ID Penyimpanan</string>
    <string name="nama_bahan_makanan">Nama bahan makanan</string>
    <string name="status_makanan">Status makanan</string>
    <string name="bahan_makananku">Bahan Makananku</string>
    <string name="alamat_saya">Alamat Saya</string>
    <string name="tambah_alamat">Tambah Alamat</string>
    <string name="alamat_lengkap">Alamat lengkap</string>
    <string name="daftar_alamat_saya">Daftar alamat saya</string>
    <string name="scan">Scan</string>
    <string name="share">Share</string>
    <string name="tips">Tips</string>
    <string name="tab_text_1">Ambil</string>
    <string name="tab_text_2">Kirim</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="masukkan_nama_makanan">Masukkan nama makanan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="deskripsi_makanan">Bisa ceritain rasa makanannya di sini</string>
    <string name="stok">Stok</string>
    <string name="stok_hint">Masukkan banyak stok yang ingin dibagi</string>
    <string name="jam_pengambilan">Jam Pengambilan</string>
    <string name="alamat">Alamat</string>
    <string name="pilih_alamat">Pilih alamat</string>
    <string name="bagikan_makanan">Bagikan Makanan</string>
    <string name="gunakan_gambar">Gunakan gambar</string>
    <string name="ulangi_pengambilan_gambar">Ulangi pengambilan gambar</string>
    <string name="masukkan_nama_anda">Masukkan nama Anda</string>
    <string name="masukkan_alamat_lengkap">Masukkan alamat lengkap</string>
    <string name="cari_makanan">Cari Makanan</string>
    <string name="cari_penyimpananku">Cari Penyimpananku</string>
</resources>