<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/welcome_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title_welcome"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_logo" />

    <TextView
        android:id="@+id/desc_welcome"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/desc_welcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_welcome" />

    <Button
        android:id="@+id/button_login_welcome"
        android:layout_width="126dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/login"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_welcome" />

    <Button
        android:id="@+id/button_register_welcome"
        android:layout_width="126dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/register"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_welcome" />

    <TextView
        android:id="@+id/agreement_welcome"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/agreement_welcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_register_welcome" />

</androidx.constraintlayout.widget.ConstraintLayout>