<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scan.ConfirmationScanFoodActivity">

    <FrameLayout
        android:id="@+id/scan_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/orange"
            android:text="@string/scan_food"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textSize="24sp"/>
    </FrameLayout>

    <ImageView
        android:id="@+id/iv_confirm_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scan_food"
        app:srcCompat="@drawable/ic_image" />

    <TextView
        android:id="@+id/tv_scan_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/confirm_scan_photo"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_confirm_photo" />

    <Button
        android:id="@+id/btn_confirm_photo_yes"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:fontFamily="@font/montserrat_bold"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="40dp"
        android:text="@string/yes"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:backgroundTint="@color/purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_scan_food" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/montserrat_bold"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/retake_photo"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:backgroundTint="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_scan_food" />

</androidx.constraintlayout.widget.ConstraintLayout>