<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/email_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/email_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.capstoneproject.aplikasiantifoodwaste.custom.CustomEditTextEmail
        android:id="@+id/custom_edit_text_email_login"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_label" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/password_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_edit_text_email_login" />

    <com.capstoneproject.aplikasiantifoodwaste.custom.CustomEditTextPassword
        android:id="@+id/custom_edit_text_password_login"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_label" />

    <com.capstoneproject.aplikasiantifoodwaste.custom.CustomButtonLogin
        android:id="@+id/custom_button_login"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_edit_text_password_login" />

    <TextView
        android:id="@+id/label_new_account1"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="32dp"
        android:text="@string/new_account_label1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_button_login" />

    <TextView
        android:id="@+id/label_new_account2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="112dp"
        android:text="@string/new_account_label2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_button_login" />

</androidx.constraintlayout.widget.ConstraintLayout>