<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:item_penyimpanan_home="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/order_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    item_penyimpanan_home:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/id_penyimpanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/id_penyimpanan"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:visibility="gone"
            item_penyimpanan_home:layout_constraintStart_toStartOf="parent"
            item_penyimpanan_home:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_penyimpanan"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            item_penyimpanan_home:layout_constraintStart_toStartOf="parent"
            item_penyimpanan_home:layout_constraintTop_toBottomOf="@+id/id_penyimpanan"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_nama_bahan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/nama_bahan_makanan"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            item_penyimpanan_home:layout_constraintStart_toEndOf="@+id/iv_penyimpanan"
            item_penyimpanan_home:layout_constraintTop_toBottomOf="@+id/id_penyimpanan" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/status_makanan"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            item_penyimpanan_home:layout_constraintStart_toEndOf="@+id/iv_penyimpanan"
            item_penyimpanan_home:layout_constraintTop_toBottomOf="@+id/tv_nama_bahan" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>
